# codestage

./: .gitignore  LICENSE.md  README.md  css.worker.js  editor.worker.js  html.worker.js  index.html  json.worker.js  logo.psd  logo2.psd  logo3.psd  manifest.json  meta.psd
basic_sample/: index.html
cli/: Cargo.toml  build.rs  codestage.toml  manifest.json  test.toml
cli/src/: main.rs
css/: app.66ac47bb.css  app.d640093b.css  chunk-vendors.056428d1.css
electricflower/: index.html
example_project/: codestage.json  codestage.toml
example_project/basic_sample/: index.html  test.css
frontend/: index.html  package.json  package_monaco.py  vite.config.js  vue.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  App.module.css  (+6 more)
halo/: index.html
js/: 1022.ac1a1710.js  1030.7cd47091.js  1319.df3a1256.js  15.666db910.js  1598.0b9f9b2b.js  1636.840165ee.js  2008.cf8d74f1.js  2250.1140d508.js  2341.540108b3.js  2358.3b01452d.js  2401.a997703a.js  2532.b495b868.js  2784.a1d41a8b.js  2804.11e50f32.js  2936.5600e198.js  3202.2eb48297.js  3263.a787e5d9.js  3268.dc596b8c.js  3415.e3b6c96d.js  3629.1320b8ea.js  3700.4776c9db.js  3703.51e6dd1d.js  3817.b48ae53a.js  386.934f6c7b.js  3956.cb172466.js  4034.4cc0fdcd.js  413.db21979d.js  4366.a78cc7a0.js  4962.1798a3c6.js  501.f78541cb.js  5019.115dff4a.js  5096.e06ff5c5.js  5106.04682890.js  5191.ce3e9fa1.js  5254.e2206a82.js  5527.7dfa2a78.js  5630.13d87e9b.js  5661.64e49168.js  5662.a13650fa.js  5710.02f5a18d.js  (+58 more)
new_frontend/: build.sh  package.json  vite.config.js
spacerocks/: index.html
(+8 files in other folders)
