[package]
name = "codestage"
version = "0.1.1-alpha.1"
edition = "2021"
authors = ["Shi Yan <billconan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A static site generator to create javascript playground demo"
readme = "../README.md"
homepage = "https://github.com/shi-yan/codestage"
repository = "https://github.com/shi-yan/codestage"
keywords = ["cli", "static-site", "demo", "code-playground", "javascript"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "6.4"
clap = { version = "4.0", features = ["derive"]}
fs_extra = "1.2"
anyhow = "1.0"